--- a/src/AltViews.css
+++ b/src/AltViews.css
@@ -658,7 +658,7 @@
 }
 .bottom-container-new {
     margin: 10px;
-    margin-top:15px;
+    margin-top:5px;
     /*display: none;*/
     flex-direction: column;
     justify-items: stretch;
@@ -725,10 +725,13 @@ Button.btn-2:hover {
     font-size:26px;
 }
 .former-price {
-    font-size: 19px;
+    font-size: 100%;
     text-decoration: line-through;
-    margin-right:10px;
-    opacity: .7;
+    /*margin-right:10px;*/
+    opacity: .8;
+    /*margin-top:-10px;*/
+    /*vertical-align: super;*/
+
 }
 .button-col {
     display: flex;
@@ -739,9 +742,9 @@ Button.btn-2:hover {
     margin-bottom:-25px;
 }
 .add-to-text {
-    font-size: 14px;
-    margin-bottom: 5px;
-    margin-top: 5px;
+    font-size: 80%;
+    margin-bottom: 0px;
+    margin-top: 7px;
     font-weight:400;
     color: #929292;
     font-style: italic;
