--- a/src/App.css
+++ b/src/App.css
@@ -2457,6 +2457,9 @@ container-hover {
     margin-left:15px;
     flex-shrink: 0;
 }
+/*.filtering-header div:not(.text-center):not(.filtering-hover-text) {*/
+    /*color: #999;*/
+/*}*/
 
 .filtering-header .filtering-hover-text {
     cursor: pointer;
@@ -2482,7 +2485,7 @@ container-hover {
     justify-content: space-around;
     margin-top: -21px;
     padding: 10px;
-    width: 250px;
+    width: 100%;
     z-index: 9999;
 
 }
