--- a/src/tracks-2.css
+++ b/src/tracks-2.css
@@ -22,7 +22,7 @@ body {
     font-family: Helvetica;
     color: var(--font-color);
 
-    --button-shadow: 4px 4px 2px rgba(0,0,0,.6);
+    --button-shadow: 4px 4px 2px rgba(0,0,0,.5);
     --button-shadow-pressed: 2px 2px 1px rgba(0,0,0,.6);
     --button-shadow-selected: 2px 2px 1px rgba(0,0,0,.3) inset;
     /*//, 2px 2px 0px rgba(0,0,0,.05) inset;*/
@@ -1431,7 +1431,7 @@ div .age12to14 {
     display: flex;
     align-items: center;
     justify-items: center;
-    width: 100%;
+    width: 75%;
     margin:auto;
     margin-bottom:10px;
     border-width: 1px;
@@ -1508,7 +1508,7 @@ div .age12to14 {
     display: flex;
     flex-direction: row;
     margin: auto;
-    align-items: center;
+    /*align-items: center;*/
     /*justify-items: space-between;*/
     justify-content: space-between;
     /*height: 40px;*/
@@ -1551,7 +1551,7 @@ div .age12to14 {
     filter: brightness(.95);
     box-shadow:  var(--button-shadow-pressed);
 }
-.price-text {
+.price-text-2 {
     font-weight:400;
 }
 
@@ -1562,7 +1562,7 @@ div .age12to14 {
 
 .allTracks #roblox-track {
     padding-bottom:100px;
-    padding-top:20px;
+    /*padding-top:20px;*/
 }
 
 .color {
@@ -1697,11 +1697,11 @@ div .age12to14 {
     font-weight:400;
     color: white;
     text-align: center;
-
     position: fixed;
     bottom:-40px;
     left:0;
     margin:auto;
+    width:65%;
 
     /*background-color: var(--background-color);*/
     background-color: #525252;
@@ -1713,7 +1713,6 @@ div .age12to14 {
     /*margin-left:-75px;*/
     /*margin-left:-5%;*/
     box-shadow: var(--floating-shadow);
-    width:100%;
     transition: bottom 1s;
     padding-top:5px;
 
@@ -1834,8 +1833,23 @@ div:not(.track-line) {
     /*opacity: .5;*/
     box-shadow: none;
     pointer-events: none;
+    height:100%;
+    display: flex;
+    flex-direction: column;
+    align-self: flex-end;
+    /*font-size:120%;*/
     /*color: #666;*/
+
+    /*line-height: 200%;*/
 }
 .in-cart-2 Button{
     box-shadow: var(--button-shadow-selected);
+    /*padding-top:13px;*/
+    /*padding-bottom:13px;*/
+    height:100%;
+    /*height: 100%;*/
+    min-height: 38px;
+}
+.tip-class {
+    font-size:20px;
 }
