--- a/src/tracks-2.css
+++ b/src/tracks-2.css
@@ -32,6 +32,10 @@ body {
     --season-stop-shadow: -3px -3px 0px rgba(0, 0, 0, 0.15) inset;
     --subway-icon-shadow: -6px -6px 0px rgba(0, 0, 0, 0.15) inset;
 
+    --button-shadow-small: 2px 2px 1px rgba(0,0,0,.5);
+    --button-shadow-pressed-small: 1px 1px 1px rgba(0,0,0,.6);
+    --button-shadow-selected-small: 1px 1px 1px rgba(0,0,0,.3) inset;
+
 
     --highlight-color: white;
     --faded-color: #ccc;
@@ -1878,6 +1882,9 @@ div:not(.track-line) {
     /*height: 100%;*/
     min-height: 38px;
 }
+.in-cart-2.makerspace-button Button {
+    box-shadow: var(--button-shadow-selected-small);
+}
 .tip-class {
     font-size:20px;
 }
@@ -1887,4 +1894,145 @@ div:not(.track-line) {
 .owned-event {
     pointer-events: none;
     background-color: grey;
+}
+.makerspace-section {
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+.makerspace-button {
+    padding:5px;
+    margin:2px;
+    /*width:40px;*/
+}
+.makerspace-month {
+    width:100%;
+    /*margin:5px;*/
+    /*height:50px;*/
+    /*margin-top:20px;*/
+    padding:5px;
+    /*background-color: #e7e7e7;*/
+    display: flex;
+    /*justify-content: flex-start;*/
+    /*align-items: flex-start;*/
+    margin-left:130px;
+}
+.makerspace-month .div {
+    margin:auto;
+    height:100%;
+}
+.makerspace-month-name {
+    margin:auto;
+    width:130px;
+    font-weight: 200;
+    font-size:20px;
+    justify-self: flex-end;
+    text-align: right;
+}
+.makerspace-days-container {
+    display: flex;
+    margin:auto;
+    width: 100%;
+    /*height:100%;*/
+    padding-left:20px;
+
+}
+.day-button-text {
+    min-height: unset;
+    height:40px;
+    width:70px;
+    justify-content: center;
+    font-size:20px;
+    margin-bottom: -5px;
+
+}
+.day-button {
+
+}
+.maker-color > div {
+    background-color: #9e97ff;
+
+}
+.makerspace-button Button {
+    color: #fff;
+    background-color: #9e97ff;
+    pointer-events: none;
+    box-shadow:  var(--button-shadow-small);
+    font-size:100%;
+    transition: box-shadow 0s;
+    /*border-radius: 4px;*/
+    min-width: unset;
+    width: 60px;
+}
+
+.makerspace-button:hover Button {
+    /*box-shadow: 2px 2px 0px rgba(0,0,0,.3);*/
+    filter: brightness(1.1);
+    /*--background-color: white;*/
+    /*cursor: pointer;*/
+}
+
+.makerspace-button:active Button {
+    /*box-shadow: none;*/
+    filter: brightness(.95);
+    box-shadow:  var(--button-shadow-pressed-small);
+    /*cursor: pointer;*/
+}
+.subway-icon.maker {
+    background-color: transparent;
+    color:#999;
+    border-style: dashed;
+    border-color: #999;
+    border-width:4px;
+    line-height: 85px;
+    /*align-self:flex-end;*/
+    /*justify-self: flex-end;*/
+    /*justify-content: flex-end;*/
+    /*justify-items: flex-end;*/
+    /*!*align-content: flex-end;*!*/
+}
+.makerspace-description-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left:20px;
+}
+
+.makerspace-description-section .track-label-description {
+    display: flex;
+    flex-direction: column;
+    width:100%;
+    padding-left:30px;
+    font-size:16px;
+}
+.maker-title {
+    font-size:22px;
+    font-weight:600;
+    margin-bottom:10px;
+}
+.maker-copy {
+    font-size:14px;
+}
+.owned-maker {
+    background-color: transparent;
+    align-content: flex-end;
+    justify-content: flex-end;
+
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+}
+.owned-maker div:first-child {
+    font-size:18px;
+    height: 60%;
+    align-content: center;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+}
+.owned-maker .add-to-text {
+    font-style: normal !important;
 }
