--- a/src/tracks-2.css
+++ b/src/tracks-2.css
@@ -2081,3 +2081,7 @@ div:not(.track-line) {
     border-color: var(--faded-color);
     box-shadow: none;
 }
+.spacer-me {
+    height:30px;
+    margin-bottom: 100px;
+}
